// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2-skull 1`] = `
"type    
XXXXXXXX	
X  kK  X	
XXXXXXXX	"
`;

exports[`2-skull 2`] = `
"type    
XXXXXXXX	
X  --  X	
XXXXXXXX	"
`;

exports[`9-skull 1`] = `
"type 
XXXXX	
XkKkX	
XKkKX	
XkKkX	
XXXXX	"
`;

exports[`9-skull 2`] = `
"type 
XXXXX	
X   X	
X - X	
Xk  X	
XXXXX	"
`;

exports[`bonetar-conflicting-attack-move 1`] = `
"type 
XXXXX	
X s X	
Xs-BX	
X B X	
XXXXX	"
`;

exports[`bonetar-conflicting-attack-move 2`] = `
"type 
XXXXX	
X s X	
Xs- X	
X B X	
XXXXX	"
`;

exports[`colliding skulls 1`] = `
"type       
XXXXXXXXXXX	
X         X	
X  k---K  X	
X         X	
XXXXXXXXXXX	"
`;

exports[`colliding skulls 2`] = `
"type       
XXXXXXXXXXX	
X         X	
X  -----  X	
X         X	
XXXXXXXXXXX	"
`;

exports[`getDefaultPath 1`] = `
"type 
XXXXX	
X   X	
X - X	
X   X	
XXXXX	"
`;

exports[`getDefaultPath 2`] = `
"type 
XXXXX	
X   X	
X   X	
X | X	
X | X	
X | X	
X | X	
X   X	
X   X	
XXXXX	"
`;

exports[`getDefaultPath 3`] = `
"type      
XXXXXXXXXX	
X        X	
X  ----  X	
X        X	
XXXXXXXXXX	"
`;

exports[`getDefaultPath 4`] = `
"type      
XXXXXXXXXX	
X        X	
X        X	
X  -|    X	
X   |    X	
X   |    X	
X   ---  X	
X        X	
X        X	
XXXXXXXXXX	"
`;
